--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,12 @@ h1{
     color: rgb(0, 0, 0);
     padding-top: 10px;
     text-align: center;
-    font-size: 60px;
+    font-size: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
+/* First name, last name and email input field background*/
 input {
     background-color: rgb(255, 255, 255);
     width: 70%;
@@ -17,11 +18,12 @@ input {
     font-size: 20px;
     padding: 16px 16px;
     border-radius: 10px;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     margin-bottom: 20px;
     
 }
 
+/* message field */
 textarea {
     background-color: rgb(255, 255, 255);
     width: 70%;
@@ -29,7 +31,7 @@ textarea {
     font-size: 20px;
     padding: 16px 16px;
     border-radius: 10px;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     margin-bottom: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -47,19 +49,45 @@ textarea:focus-within {
 }
 
 button {
-    background-color:rgb(0, 0, 0) ;
+    background-color:rgba(0, 0, 0, 0.916) ;
     color:white;
-    border-radius: 20x;
+    border: none;
+    border-radius: 10px;
     border-color: rgb(0, 0, 0);
     font-size: 22px;
-    padding: 10px 18px;
+    padding: 16px 16px;
     text-align:center;
-    display: flex;
-    margin: auto;
+    width: 70%;
+    margin-left: 12%;
+
 
 }
 
+/* changes the color opacity of the button when hovered*/
 button:hover {
     opacity: 80%;
     cursor: pointer;
+}
+
+/* puts labels above their fields*/
+
+label {
+    display:block;
+    margin-left: 12%;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.form-container {
+    background-color: rgba(135, 135, 135, 0.212);
+    width: 60%;
+    margin:30px auto;
+    padding:30px;
+    border-radius: 15px;
+
+}
+
+input, textarea, button {
+    box-sizing: border-box;
 }
