--- a/styles.css
+++ b/styles.css
@@ -3,49 +3,42 @@ body { background-color: #ffffff;
 }
 h1{
     color: rgb(0, 0, 0);
-    padding-top: 10px;
+    padding-top: 20px;
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
+    font-weight: 600;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
-/* First name, last name and email input field background*/
-input {
+/* First name, last name and email and message field background*/
+input, textarea {
     background-color: rgb(255, 255, 255);
     width: 70%;
     margin-left: 12%;
-    font-size: 20px;
+    font-size: 15px;
     padding: 16px 16px;
     border-radius: 10px;
     border-color: rgb(255, 255, 255);
     margin-bottom: 20px;
-    
-}
-
-/* message field */
-textarea {
-    background-color: rgb(255, 255, 255);
-    width: 70%;
-    margin-left: 12%;
-    font-size: 20px;
-    padding: 16px 16px;
-    border-radius: 10px;
-    border-color: rgb(255, 255, 255);
-    margin-bottom: 20px;
+    box-shadow: none;
+    border: 2px solid #dcdcdc;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 input:focus-within {
     outline: none;
     border-color: rgb(0, 0, 0);
     border-width: 3px;
+    box-shadow: none;
 }
 
 textarea:focus-within {
     outline: none;
     border-color: rgb(0, 0, 0);
     border-width: 3px;
+    box-shadow: none;
 }
 
 button {
@@ -54,7 +47,7 @@ button {
     border: none;
     border-radius: 10px;
     border-color: rgb(0, 0, 0);
-    font-size: 22px;
+    font-size: 20px;
     padding: 16px 16px;
     text-align:center;
     width: 70%;
@@ -82,12 +75,25 @@ label {
 .form-container {
     background-color: rgba(135, 135, 135, 0.212);
     width: 60%;
-    margin:30px auto;
-    padding:30px;
+    margin:40px auto;
+    padding:20px;
     border-radius: 15px;
 
 }
 
 input, textarea, button {
     box-sizing: border-box;
+}
+/* Screen size adjustment*/
+@media (max-width: 768px) {
+  .form-container {
+    width: 85%;
+    padding: 20px;
+  }
+  h1 {
+    font-size: 26px;
+  }
+  label {
+    font-size: 16px;
+  }
 }
