--- a/Styles.css
+++ b/Styles.css
@@ -1,33 +1,67 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:hamlin ;
     background-color: #fafafa;
-    color: #333;
+    color: #000000;
     line-height: 1.6;
     margin:0;
     padding:0;
-
-}
-
-body {
-    max-width: 800px;
-    margin:60px auto;
-    padding: 0 20px;
-    background: #fff;
+    background: none; /* was white*/
     border-radius: 10px;
 
 }
 
 h1 {
   font-size: 2.2em;
-  color: #343d46f9;
+  color: #000000f9;
   text-align: center;
   margin-bottom: 20px;
 }
 
 h2 {
   font-size: 1.7em;
-  color: #343d46f9;
+  color: #000000f9;
   margin-top: 40px;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.split-page {
+  display: flex;
+  height: 100vh;
+  min-height: 100vh;
+}
+
+.left {
+  flex: 1;
+  background: #ddddd4;
+  padding: 40px;
+}
+.right {
+  flex: 1;
+  background: #757574;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-place img {
+  max-width: 80%;
+  border-radius: 1px;
+}
+
+.image-place, .image-border {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.image-border {
+  background:#9f9d9c ;
+  width: 90%;
+  height: 80%;
+  border-radius: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px;
 }
