--- a/Styles.css
+++ b/Styles.css
@@ -28,7 +28,7 @@ h2 {
 .split-page {
   display: flex;
   height: 100vh;
-  min-height: 100vh;
+  /* min-height: auto; */
 }
 
 .left {
@@ -68,16 +68,17 @@ h2 {
 
 .faq-section {
 max-width: 800px;
-margin: 10% auto;
-padding: 0 20px;
+margin: 0% auto;
+padding:  10px;
 text-align: center;
 }
 
 .faq-section h2 {
+  padding: 5px;
   font-size: 2em;
   margin-bottom: 10px;
   color: #333;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .faq-item {
@@ -90,13 +91,22 @@ text-align: center;
 }
 
 .faq-question {
-  padding: 20px;
+  padding: 10px;
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 .faq-answer {
-  padding: 20px;
+  padding:10px;
   font-weight: 400;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   line-height: 1.5;
+}
+
+.faq-background {
+  background-color:#f9f5e3;
+  width: 100%;
+  padding:60px 0;
+  min-height: 100vh;
+  display: flex;
+
 }
