--- a/Styles.css
+++ b/Styles.css
@@ -76,18 +76,21 @@ text-align: center;
 .faq-section h2 {
   padding: 5px;
   font-size: 2em;
-  margin-bottom: 10px;
-  color: #333;
+  margin-bottom: 45px;
+  color: #000000;
   /* justify-content: center; */
 }
 
 .faq-item {
-  background: #ddddd4;
-  border-radius: 10px;
+  background: #cbc6c69c;
+  border-radius: 20px;
   margin-bottom: 20px;
   /* overflow: hidden; */
   text-align: left;
   /* cursor: pointer; */
+  box-shadow: 0 2px 10px rgba(96, 96, 96, 0.1);
+
+
 }
 
 .faq-question {
@@ -96,16 +99,16 @@ text-align: center;
   font-size: 1.4rem;
 }
 .faq-answer {
-  padding:10px;
+  padding:10px 20px 15px 20px;
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.5;
 }
 
 .faq-background {
-  background-color:#f9f5e3;
+  background-color:#f9f9f9;
   width: 100%;
-  padding:60px 0;
+  padding:5px 0;
   min-height: 100vh;
   display: flex;
 
