--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,15 @@ h2 {
     text-align: left;
     font-size: 20px;
 }
+.search-bar {
+    display: flex;
+    justify-content:left;
+}
+
+.search-bar input {
+    width: 250px;
+    padding: 10px 10px;
+    border-radius: 25px;
+    border: 1px solid #ddddd4;
+
+}
