--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ h1{
     color: rgb(0, 0, 0);
     padding-top: 20px;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 600;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    padding-bottom: 20px;
 }
 
 /* First name, last name and email and message field background*/
@@ -50,7 +50,7 @@ button {
     font-size: 20px;
     padding: 16px 16px;
     text-align:center;
-    width: 70%;
+    width: 60%;
     margin-left: 12%;
 
 
@@ -74,11 +74,12 @@ label {
 
 .form-container {
     background-color: rgba(135, 135, 135, 0.212);
-    width: 60%;
-    margin:40px auto;
+    width: 50%;
+    max-height: 100vh;
+    margin:10px auto;
     padding:20px;
     border-radius: 15px;
-
+    font-family:  sans-serif;
 }
 
 input, textarea, button {
@@ -96,4 +97,11 @@ input, textarea, button {
   label {
     font-size: 16px;
   }
+}
+ 
+/* asterisk next to required fields */
+.required {
+    color: red;
+    margin-left: 2px;
+
 }
