--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
+
+
 /* displays images in rows and columns */
-.image-row {
+.product-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap:20px;
@@ -19,7 +22,7 @@ flex-direction: column;
 align-items: left;
 }
 /* image */
-.image-row img {
+.product-grid img {
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -30,8 +33,10 @@ align-items: left;
 h1 {
 text-align: center;
 justify-content: center;
-font-family:'Montserrat', sans-serif;
-font-size: 40px;
+font-family: "Ibarra Real Nova", serif;
+font-size: 48px;
+font-weight: 600;
+letter-spacing: 0px;
 
 }
 /* product information */
