--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Font+Name&display=swap');
 
+.content-wrap {
+    display: flex;
+    gap: 30px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.side-bar {
+    padding: 20px;
+    border-radius: 10px;
+    width: 240px;
+    height: 550px;
+    border: 1px solid #ddd;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+
+}
+
+input[type="checkbox"] {
+  accent-color: black;  
+}
+input[type="range"] {
+accent-color: black;  
+}
+
+.price-wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.price-wrap label {
+align-self: flex-end;
+font-size: 14px;
+margin-bottom: 6px;
+
+}
+/* .price-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} */
+
+.main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.top-bar {
+    display: flex;
+    align-items: center;
+    gap:15px;
+    padding-bottom: 10px;
+}
+
+.top-bar .search {
+width: 327px;
+height: 40px;
+padding: 1px 15px;
+border-radius: 40px;
+border: 1px solid #ccc;
+}
+
+.button, .button1 {
+    padding: 10px 10px;
+    border-radius: 10px;
+    border: none;
+    background: #f0f0f0;
+    font-size: 14px;
+    color:#555;
+
+}
 /* displays images in rows and columns */
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap:20px;
+    grid-template-columns: repeat(auto-fill,minmax(230px,1fr));
+    gap:30px;
     max-width: 800px;
-    margin: 40px auto;
+    margin: 35px auto;
     justify-content: center;
+
 
 }
 
 /* container of each image */
 .item {
-background:#ddddd4 ;
+background: #FFFFFF;
+height: 280px;
+width: 230px;
 padding: 10px;
-border-radius: 1px;
+border-radius: 10px;
 display: flex;
 flex-direction: column;
 align-items: left;
+border: 1px solid #ddd;
+
 }
 /* image */
 .product-grid img {
@@ -42,13 +123,17 @@ letter-spacing: 0px;
 /* product information */
 h2 {
     text-align: left;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 }
-h3 {
-    font-family: "Body/Font Family", serif ;
-    font-weight: 300;
+
+p {
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.search-bar {
+/* .search-bar {
     display: flex;
     justify-content:left;
 }
@@ -59,29 +144,41 @@ h3 {
     border-radius: 25px;
     border: 1px solid #ddddd4;
 
-}
+} */
 
-.side-bar {
-    padding: 20px;
-    border-radius: 10px;
-    width: 240px;
-    height: auto;
-    border: 1px solid ;
 
+.side-bar h3 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    margin-bottom: 4px;
 }
 
 .tags {
 display: flex;
-gap: 10px;
+gap: 8px;
 flex-wrap: wrap;
 
 }
 
 .tag {
 background-color: #F5F5F5;
-padding: Space/200;
-border-radius: Radius/200;
+padding: 6px 12px;
+border-radius: 8px;
 font-size: medium;
+display: inline-flex;
+align-items: center;
 gap: 8;
+transition: background 0.2s;
 
+}
+
+.tag .X {
+    font-size: 14px;
+    opacity: 0.6;
+
+}
+
+.side-bar price-wrap{
+    display: flex;
+    align-items: center;
 }
