--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,22 @@
     padding: 20px;
 }
 
+/*  side bar containing keywords, categories, price, colour and size */
 .side-bar {
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
-    width: 240px;
-    height: 550px;
+    width: 250px;
+    height: 100%;
     border: 1px solid #ddd;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 4px;
+    padding-bottom: 10px;
 
 
 }
-
+/* colour of checkbox */
 input[type="checkbox"] {
   accent-color: black;  
 }
@@ -40,24 +42,24 @@ font-size: 14px;
 margin-bottom: 6px;
 
 }
-/* .price-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
+
 
 .main {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 1px;
+    align-items: flex-start;
 }
 
 .top-bar {
     display: flex;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
     align-items: center;
     gap:15px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .top-bar .search {
@@ -68,14 +70,25 @@ border-radius: 40px;
 border: 1px solid #ccc;
 }
 
-.button, .button1 {
+.btn-New, .btn-PriceAsc, .btn-PriceDesc, .btn-Rating {
     padding: 10px 10px;
     border-radius: 10px;
     border: none;
     background: #f0f0f0;
     font-size: 14px;
     color:#555;
+    transition: opacity 0.2s ease;
+    cursor: pointer;
+}
 
+.btn-New:hover{
+opacity: 0.8;
+}
+
+.btn-New.active, .btn-PriceAsc.active, .btn-PriceDesc.active,
+.btn-Rating.active {
+    background: #313131f4 ;
+    color:#fffdfdbd
 }
 /* displays images in rows and columns */
 .product-grid {
@@ -83,16 +96,17 @@ border: 1px solid #ccc;
     grid-template-columns: repeat(auto-fill,minmax(230px,1fr));
     gap:30px;
     max-width: 800px;
-    margin: 35px auto;
+    max-width: 100%;
+    margin: 0 auto;
     justify-content: center;
-
 
 }
 
 /* container of each image */
 .item {
 background: #FFFFFF;
-height: 280px;
+height: 100%;
+padding-bottom: 1px;
 width: 230px;
 padding: 10px;
 border-radius: 10px;
@@ -133,18 +147,6 @@ p {
     font-weight: bold;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-/* .search-bar {
-    display: flex;
-    justify-content:left;
-}
-
-.search-bar input {
-    width: 250px;
-    padding: 10px 10px;
-    border-radius: 25px;
-    border: 1px solid #ddddd4;
-
-} */
 
 
 .side-bar h3 {
