--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,19 @@
 
 
 }
+
+/* side bar lists of each sub-header */
+.side-bar label {
+    font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    gap: 6px;
+    align-items: center;
+
+}
+
+
+.
 /* colour of checkbox */
 input[type="checkbox"] {
   accent-color: black;  
@@ -37,7 +50,7 @@ accent-color: black;
     flex-direction: column;
 }
 .price-wrap label {
-align-self: flex-end;
+align-self: flex-start;
 font-size: 14px;
 margin-bottom: 6px;
 
@@ -52,6 +65,7 @@ margin-bottom: 6px;
     align-items: flex-start;
 }
 
+/* top-bar section */
 .top-bar {
     display: flex;
     width: 100%;
@@ -70,6 +84,7 @@ border-radius: 40px;
 border: 1px solid #ccc;
 }
 
+/* top-bar buttons */
 .btn-New, .btn-PriceAsc, .btn-PriceDesc, .btn-Rating {
     padding: 10px 10px;
     border-radius: 10px;
@@ -166,7 +181,7 @@ flex-wrap: wrap;
 background-color: #F5F5F5;
 padding: 6px 12px;
 border-radius: 8px;
-font-size: medium;
+/* font-size: medium; */
 display: inline-flex;
 align-items: center;
 gap: 8;
@@ -174,6 +189,7 @@ transition: opacity 0.2s ease;
 cursor: pointer;
 
 }
+
 
 .tag .X {
     display: none;
@@ -199,7 +215,61 @@ input[type="checkbox"]:checked + .tag:hover {
 
 }
 
-.side-bar price-wrap{
+.side-bar .price-wrap {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.price-slider {
+  position: relative;
+  width: 100%;
+  max-width: 250px;
+  height: 40px;
+  box-sizing: border-box;
+}
+
+/* To handle the slider thumbs */
+.price-slider input[type="range"] {
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  pointer-events: none; 
+  -webkit-appearance: none;
+  background: none;
+  z-index: 3;
+
+}
+
+.price-slider input[type="range"]::-webkit-slider-thumb {
+  pointer-events: all; 
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #2C2C2C;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 10px;
+
+}
+
+.track, .range {
+  position: absolute;
+  height: 4px;
+  top: 50%;
+  border-radius: 2px;
+  transform: translateY(-50%);
+
+}
+.track {
+    width: 100%;
+    background: #ddd;
+    z-index: 1;
+}
+/* the slider line of the price range */
+.range {
+  background: #2C2C2C;
+  z-index: 2;
+
 }
