--- a/Styles.css
+++ b/Styles.css
@@ -1,22 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 body {
-    font-family:hamlin ;
+    font-family: 'Josefin Slab',serif;
     background-color: #fafafa;
     color: #000000;
     line-height: 1.6;
     margin:0;
     padding:0;
     background: none; /* was white*/
-    border-radius: 10px;
+
 
 }
 
+/* about us header */
 h1 {
+  font-family: 'Ibarra Real Nova', serif;
+  font-weight: 400;
   font-size: 2.2em;
   color: #000000f9;
   text-align: center;
   margin-bottom: 20px;
 }
-
+/* faqs header */
 h2 {
   font-size: 1.7em;
   color: #000000f9;
@@ -27,34 +34,41 @@ h2 {
 
 .split-page {
   display: flex;
-  height: 100vh;
-  /* min-height: auto; */
+  /* align-items: stretch; */
+  /* justify-content: center; */
+  width: 100%;
+  /* height: 700px; */
+  margin: 0 auto;
 }
 
 .left {
-  flex: 1;
-  background: #ddddd4;
+  flex:1;
   padding: 40px;
+  background: #DDDCD5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
 .right {
   flex: 1;
-  background: #757574;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  max-width: 800px;
+  position: relative;
+  overflow: hidden;
+  background-color: #222222 ;
 }
-
-.image-place img {
-  max-width: 80%;
-  border-radius: 1px;
-}
-
-.image-place, .image-border {
+.right img {
   width: 100%;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  aspect-ratio: 1/1;
+
 }
 
+
+
+/* a border around the image
 .image-border {
   background:#9f9d9c ;
   width: 90%;
@@ -64,16 +78,18 @@ h2 {
   justify-content: center;
   align-items: center;
   padding: 2px;
-}
+} */
 
 .faq-section {
 max-width: 800px;
 margin: 0% auto;
 padding:  10px;
 text-align: center;
+
 }
 
 .faq-section h2 {
+    font-family: 'Josefin Slab',serif;
   padding: 5px;
   font-size: 2em;
   margin-bottom: 45px;
@@ -82,6 +98,7 @@ text-align: center;
 }
 
 .faq-item {
+  font-family: 'Josefin Slab',serif;
   background: #cbc6c69c;
   border-radius: 20px;
   margin-bottom: 20px;
@@ -94,11 +111,13 @@ text-align: center;
 }
 
 .faq-question {
+    font-family: 'Josefin Slab',serif;
   padding: 10px;
   font-weight: 600;
   font-size: 1.4rem;
 }
 .faq-answer {
+    font-family: 'Josefin Slab',serif;
   padding:10px 20px 15px 20px;
   font-weight: 400;
   font-size: 1.2rem;
