--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
+
 body { background-color: #ffffff;
     
 }
@@ -7,7 +9,7 @@ h1{
     text-align: center;
     font-size: 40px;
     font-weight: 600;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: "Ibarra Real Nova", serif;
     padding-bottom: 20px;
 }
 
@@ -101,7 +103,7 @@ input, textarea, button {
  
 /* asterisk next to required fields */
 .required {
-    color: red;
+    color: rgb(63, 63, 63);
     margin-left: 2px;
 
 }
