--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
 
 body { background-color: #ffffff;
-    
-}
-h1{
+    margin: 0;
+    padding: 0;
+} */
+
+/* Contact us header */
+/* h1{
     color: rgb(0, 0, 0);
-    padding-top: 20px;
     text-align: center;
     font-size: 40px;
     font-weight: 600;
    font-family: "Ibarra Real Nova", serif;
-    padding-bottom: 20px;
-}
+   margin-top: 40px;
+    margin-bottom: 30px;
+} */
 
 /* First name, last name and email and message field background*/
-input, textarea {
+/* input, textarea {
     background-color: rgb(255, 255, 255);
-    width: 70%;
-    margin-left: 12%;
+    width: 100%;
     font-size: 15px;
     padding: 16px 16px;
     border-radius: 10px;
@@ -26,10 +28,10 @@ input, textarea {
     box-shadow: none;
     border: 2px solid #dcdcdc;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+} */
 
 
-input:focus-within {
+/* input:focus-within {
     outline: none;
     border-color: rgb(0, 0, 0);
     border-width: 3px;
@@ -41,9 +43,9 @@ textarea:focus-within {
     border-color: rgb(0, 0, 0);
     border-width: 3px;
     box-shadow: none;
-}
+} */
 
-button {
+/* button {
     background-color:rgba(0, 0, 0, 0.916) ;
     color:white;
     border: none;
@@ -52,43 +54,42 @@ button {
     font-size: 20px;
     padding: 16px 16px;
     text-align:center;
-    width: 60%;
-    margin-left: 12%;
+    width: 100%;
+  
 
 
-}
+} */
 
 /* changes the color opacity of the button when hovered*/
-button:hover {
+/* button:hover {
     opacity: 80%;
     cursor: pointer;
-}
+} */
 
-/* puts labels above their fields*/
+/* puts names of labels above their fields*/
 
-label {
+/* label {
     display:block;
-    margin-left: 12%;
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 5px;
-}
+} */
 
-.form-container {
+/* .form-container {
     background-color: rgba(135, 135, 135, 0.212);
-    width: 50%;
-    max-height: 100vh;
-    margin:10px auto;
-    padding:20px;
+    width: 60%;
+    max-width: 720px;
+    margin: 0 auto 60px auto;
+    padding:40px 40px;
     border-radius: 15px;
     font-family:  sans-serif;
-}
+} */
 
-input, textarea, button {
+/* input, textarea, button {
     box-sizing: border-box;
-}
+} */
 /* Screen size adjustment*/
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .form-container {
     width: 85%;
     padding: 20px;
@@ -99,11 +100,11 @@ input, textarea, button {
   label {
     font-size: 16px;
   }
-}
+} */
  
 /* asterisk next to required fields */
-.required {
+/* .required {
     color: rgb(63, 63, 63);
     margin-left: 2px;
 
-}
+} */
