--- a/css/structure.css
+++ b/css/structure.css
@@ -1,12 +1,12 @@
 .form-container {
     background-color: rgba(135, 135, 135, 0.212);
-    width: 60%;
-    max-width: 720px;
+    width: 80%;
+    max-width: 740px;
     margin: 0 auto 60px auto;
-    padding:40px 40px;
+    padding:25px;
     border-radius: 15px;
-    font-family:  sans-serif;
-}
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
 /* Screen size adjustment*/
 @media (max-width: 768px) {
   .form-container {
