--- a/css/reusable.css
+++ b/css/reusable.css
@@ -10,12 +10,12 @@ input, textarea {
     background-color: rgb(255, 255, 255);
     width: 100%;
     font-size: 14px;
-    padding: 16px 16px;
+    padding: 12px 10px;
     border-radius: 10px;
-    border-color: rgb(255, 255, 255);
+    border-color:#D9D9D9;
     margin-bottom: 20px;
     box-shadow: none;
-    border: 2px solid #dcdcdc;
+    border: 2px solid #D9D9D9;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 input, textarea, button {
@@ -37,13 +37,13 @@ textarea:focus-within {
 }
 
 button {
-    background-color:rgba(0, 0, 0, 0.916) ;
+    background-color:#2C2C2C ;
     color:white;
     border: none;
     border-radius: 10px;
     border-color: rgb(0, 0, 0);
     font-size: 16px;
-    padding: 16px 16px;
+    padding: 12px 16px;
     text-align:center;
     width: 100%;
   
