--- a/css/structure.css
+++ b/css/structure.css
@@ -1,17 +1,23 @@
 .form-container {
-    background-color: rgba(135, 135, 135, 0.212);
-    width: 80%;
-    max-width: 740px;
-    margin: 0 auto 60px auto;
-    padding:25px;
+    background-color:#14121814;
+     /* margin: 0 auto 30px auto; */
+     width: 750px;
+     margin: 0 auto; 
+     overflow: auto;
+     max-width: 100%;
+    padding:15px;
+    padding-bottom: 40px;
     border-radius: 15px;
+    border: 2px solid #D9D9D9 ;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.9rem;
+    margin-bottom: 90px;
   }
 /* Screen size adjustment*/
 @media (max-width: 768px) {
   .form-container {
     width: 85%;
-    padding: 20px;
+    padding: 8px;
   }
   h1 {
     font-size: 26px;
