--- a/livingroom-css/livingroom-reusable.css
+++ b/livingroom-css/livingroom-reusable.css
@@ -29,7 +29,8 @@ opacity: 0.8;
     color:#fffdfdbd
 }
 .no-results {
-margin: 8px 0 12px 12px;
+    padding-left: 250px;
+margin: 8px 0px 12px 250px;
 max-width: 800px;
 width: 100%;
 
@@ -45,8 +46,9 @@ padding: 10px;
 border-radius: 10px;
 display: flex;
 flex-direction: column;
-align-items: left;
+align-items: flex-start;
 border: 1px solid #ddd;
+cursor: pointer;
 
 }
 /* image */
