--- a/livingroom-css/livingroom-structure.css
+++ b/livingroom-css/livingroom-structure.css
@@ -55,9 +55,16 @@
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(230px,1fr));
     gap:30px;
-    max-width: 800px;
+    /* max-width: 800px; */
     max-width: 100%;
     margin: 0 auto;
     justify-content: center;
+
+}
+
+.product-grid a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
 
 }
