--- a/Draft/css/basket.css
+++ b/Draft/css/basket.css
@@ -1,4 +1,5 @@
 /* --- GENERAL PAGE LAYOUT --- */
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 body {
     font-family: "Ibarra Real Nova", serif;
     margin: 0;
