--- a/ProductExamplePage/CSS/sofa_style.css
+++ b/ProductExamplePage/CSS/sofa_style.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 /* This CSS file styles the product example page for a sofa */
 /* General */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Ibarra Real Nova', sans-serif;
 }
 
 body {
