--- a/Draft/css/header_footer_style.css
+++ b/Draft/css/header_footer_style.css
@@ -26,9 +26,10 @@ ul {
 }
 
 /* HEADER */
+
 .site-header {
     background: #fff;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: none;  
     position: relative;
     height: 150px;
     z-index: 1000;
