--- a/checkout.css
+++ b/checkout.css
@@ -37,7 +37,7 @@ body {
   display: flex;
   /* align-items: left; */
   gap: 20px;
-  justify-content: flex-start;
+  justify-content: flex-end;
   width: 100%;
 margin-left: 15px;
 
